--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.delsi.pokemon_flutter_app">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
    <application
         android:label="pokemon_flutter_app"
         android:icon="@mipmap/launcher_icon">
