--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.3
+  equatable: ^2.0.3
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
